# Langbot

./: .gitignore  AGENTS.md  README.md  pyproject.toml
langbot/: __init__.py  bot.py  classifier.py  classifier_examples.json  cli.py  memory.py  models.py  router.py  tracing.py
langbot/prompts/: character_prompts.json  classifier_examples.json  request_prompts.json
tests/: conftest.py  test_bot.py  test_classifier.py  test_cli.py  test_router.py
